[gd_scene load_steps=3 format=3 uid="uid://qxr0gsokctp6"]

[ext_resource type="Script" uid="uid://c1hgtbnv5bx74" path="res://scripts/components/ToolSlot.gd" id="1_qtdbt"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_f7ek8"]
bg_color = Color(0.3, 0.3, 0.3, 0.6)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.5, 0.5, 0.5, 0.8)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[node name="ToolSlot" type="Control"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 3
anchors_preset = 0
offset_right = 50.0
offset_bottom = 50.0
script = ExtResource("1_qtdbt")

[node name="Background" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_f7ek8")

[node name="ContentIcon" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 5.0
offset_top = 5.0
offset_right = -5.0
offset_bottom = -5.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1
stretch_mode = 5

[node name="TypeLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -25.0
offset_top = -20.0
offset_right = 25.0
offset_bottom = -3.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.9, 0.9, 0.9, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 1
theme_override_font_sizes/font_size = 10
text = "Тип слота"
horizontal_alignment = 1
vertical_alignment = 1

[node name="RequiredIndicator" type="ColorRect" parent="."]
layout_mode = 0
offset_left = -5.0
offset_top = -5.0
offset_right = 5.0
offset_bottom = 5.0
color = Color(1, 0.3, 0.3, 1)
